eventos add task, read tasks

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -11,13 +11,14 @@
     <h1>App Tareas</h1>
     <hr>
     <input type="text" id="taskInput" placeholder="Nueva Tarea">
-    <button id="taskButton">Nueva Tarea</button>
+    <button id="taskButton" onclick="addTask()">Nueva Tarea</button>
   </div>
   <div class="taskContainer">
     <p>Listado de tareas</p>
     <ul id="taskList">
-      
+
     </ul>
   </div>
+  <script src="./renderer.js"></script>
 </body>
 </html>
